--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
     <h1>SCORE KEEPER</h1>
+    <h1>0 to 0</h1>
+    <p>Playing to: 5</p>
 
     <input type="number">
     <button>Player One</button>
