--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="p2">Player Two</button>
     <button id="reset">Reset</button>
 
-    <script type="text/javascript" src="score.js"></script>
+    <script type="text/javascript" src="scoreKeeper.js"></script>
 </body>
 
 </html>
