--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
 
     <h1>SCORE KEEPER</h1>
-    <h1><span id="p1ScoreDisplay">0</span> to <span id="p2ScoreDisplay">0</span></h1>
-    <p>Playing to: 5</p>
+    <h1>P1: <span id="p1ScoreDisplay">0</span> to P2: <span id="p2ScoreDisplay">0</span></h1>
+    <p>Playing to: <span id="targetScoreDisplay">0</span></p>
 
-    <input type="number">
-    <button id="p1">Player One</button>
-    <button id="p2">Player Two</button>
-    <button id="reset">Reset</button>
+    <div class="container">
+        <input id="inputTargetScore" type="number">
+    </div>
+    <div class="container">
+        <button id="p1">Player One</button>
+        <button id="p2">Player Two</button>
+        <button id="reset">Reset</button>
+    </div>
 
     <script type="text/javascript" src="scoreKeeper.js"></script>
 </body>
